modules/aws-landing-zone/security_group.tf
resource "aws_security_group" "jenkins-sg" {
  name = "jenkins_server_security_group"
  description = "jenkins_server_security_group_with_22_8080_ports"
  vpc_id = aws_vpc.SAP_VPC[0].id

  // To Allow SSH Transport
  ingress {
    from_port = 22
    protocol = "tcp"
    to_port = 22
    cidr_blocks = ["0.0.0.0/0"]
  }

  // To Allow Port 80 Transport
  ingress {
    from_port = 8080
    protocol = "tcp"
    to_port = 8080
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }

  lifecycle {
    create_before_destroy = true
  }
}
